# datajudge

./: .flake8  .gitignore  .pre-commit-config.yaml  .prettierrc  .readthedocs.yml  404.html  CHANGELOG.md  CHANGELOG.rst  LICENSE  README.md  _typos.toml  codecov.yml  docker-compose.yaml  environment.yml  index.html  local.py  mkdocs.yml  objects.inv  pixi.toml  pyproject.toml  run_integration_tests_postgres.sh  sitemap.xml  start_db2.sh  start_mssql.sh  start_postgres.sh
.conda_lock_files/: python312_sa1_linux64.yml  python312_sa2_linux64.yml  python38_sa1_linux64.yml  python38_sa2_linux64.yml
.github/: .pull_request_template.md
.github/actions/pytest/: action.yml
.github/workflows/: build_and_publish.yaml  ci.yaml  ci_integration.yaml  codeql.yml  docs.yml  pre-commit-autoupdate.yml
.github/workflows/actions/pytest/: action.yml
CHANGELOG/: index.html
api-documentation/: index.html
development/: index.html
docs/: CHANGELOG.md  api-documentation.md  development.md  getting-started.md  index.md  installation.md  motivation.md  testing.md
docs/examples/: company-data.md  dates.md  exploration.md  twitch.md  twitch_process.py  twitch_specification.py  twitch_version1.csv  twitch_version2.csv
docs/javascripts/: katex.js
docs/source/: conf.py  development.rst  examples.rst  getting_started.rst  index.rst  installation.rst  motivation.rst  testing.rst
docs/source/examples/: example.rst  example1.rst  example2.rst  example3.rst  example_dates.rst  example_exploration.rst  example_twitch.rst  examples.rst  exploration.rst  twitch_report.html  twitch_specification.py  twitch_upload.py  twitch_version2.csv
examples/: twitch_report.html  twitch_upload.py
examples/company-data/: index.html
examples/dates/: index.html
examples/exploration/: index.html
examples/twitch/: index.html
getting-started/: index.html
installation/: index.html
javascripts/: external_links.js
motivation/: index.html
search/: search_index.json
src/datajudge/: __init__.py  _engines.py  condition.py  data_source.py  db_access.py  formatter.py  pytest_integration.py  requirements.py  utils.py
src/datajudge/constraints/: base.py  column.py  date.py  groupby.py  interval.py  miscs.py  nrows.py  numeric.py  row.py  stats.py  uniques.py  varchar.py
styles/: custom.css
testing/: index.html
tests/integration/: conftest.py  pytest_testfile.py  test_column_capitalization.py  test_data_source.py  test_integration.py  test_pytest_integration.py  test_stats.py
tests/unit/: test_add_date_no_overlap_2d_constraint.py  test_condition.py  test_data_source.py  test_db_access.py  test_formatter.py  test_percentiles.py  test_pytest.py  test_pytest_integration.py  test_requirement.py  test_set_functions.py  test_utils.py
