[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "datajudge"
authors = [{name="QuantCo, Inc.", email="noreply@quantco.com"}]
keywords = [
  "test",
  "databases",
  "validation",
]
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Database"
]
readme = "README.md"
dynamic = ["version", "description"]

requires-python = ">=3.8.0"

dependencies = [
    "sqlalchemy >=1.4",
    "setuptools",
    "scipy",
    "colorama"
]

[project.urls]
Source = "https://github.com/quantco/datajudge"

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
ensure_newline_before_comments = true
line_length = 88
known_first_party = "datajudge"
skip_glob = '\.eggs/*,\.git/*,\.venv/*,build/*,dist/*'
default_section = 'THIRDPARTY'

[tool.mypy]
# Temporary fix.
no_implicit_optional = false
allow_empty_bodies = true

[[tool.conda-env-lock.variants]]
lockfile = ".conda_lock_files/python38_sa1_linux64.yml"
dependency_file = "environment.yml"
platform = "linux-64"
constraints = ["python=3.8", "sqlalchemy=1"]

[[tool.conda-env-lock.variants]]
lockfile = ".conda_lock_files/python38_sa2_linux64.yml"
dependency_file = "environment.yml"
platform = "linux-64"
constraints = ["python=3.8", "sqlalchemy=2"]

[[tool.conda-env-lock.variants]]
lockfile = ".conda_lock_files/python312_sa1_linux64.yml"
dependency_file = "environment.yml"
platform = "linux-64"
constraints = ["python=3.12", "sqlalchemy=1"]

[[tool.conda-env-lock.variants]]
lockfile = ".conda_lock_files/python312_sa2_linux64.yml"
dependency_file = "environment.yml"
platform = "linux-64"
constraints = ["python=3.12", "sqlalchemy=2"]
