[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "datajudge"
authors = [{ name = "QuantCo, Inc.", email = "noreply@quantco.com" }]
keywords = ["test", "databases", "validation"]
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Database",
]
readme = "README.md"
dynamic = ["version", "description"]
requires-python = ">=3.8"

dependencies = ["sqlalchemy >=1.4", "setuptools", "scipy", "colorama"]

[project.urls]
Source = "https://github.com/quantco/datajudge"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = [
  "N803", # https://docs.astral.sh/ruff/rules/invalid-argument-name
  "N806", # https://docs.astral.sh/ruff/rules/non-lowercase-variable-in-function
  "E501", # https://docs.astral.sh/ruff/faq/#is-the-ruff-linter-compatible-with-black
]
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pep8-naming
  "N",
  # pyupgrade
  "UP",
]

[tool.ruff.lint.isort]
known-first-party = ["datajudge"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = '3.8'
no_implicit_optional = true
allow_empty_bodies = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["scipy.*", "impala.*", "pytest_html"]
ignore_missing_imports = true
